--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "babel-polyfill": "^6.26.0",
+    "babel-register": "^6.26.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "ipfs-http-client": "^48.2.0",
+    "ipfs-http-client-lite": "^0.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "truffle": "^5.1.62",
+    "web-vitals": "^0.2.4",
+    "web3": "^1.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
